tests/invalid_nodepend/kind.err_exp
kind.m:009: In type definition: error: ill-formed type `K1(int)'.
kind.m:012: In `:- func' declaration:
kind.m:012:   in the first argument:
kind.m:012:   error: ill-formed type `K2(string)'.
kind.m:016: In definition of inst `i'/1:
kind.m:016:   error: variable used as inst constructor.
kind.m:018: In definition of mode `m'/1:
kind.m:018:   error: variable used as inst constructor.
kind.m:020: Error: free inst parameters such as [38;5;87m`K5'[39;49m and [38;5;87m`K6'[39;49m [38;5;203mmay not occur[39;49m on
kind.m:020:   the right hand side of inst definition.
kind.m:020: In the definition of the inst `t': error: a variable such as [38;5;87m`K5'[39;49m
kind.m:020:   [38;5;203mis not a valid mode.[39;49m
kind.m:021: Error: a free inst parameter such as [38;5;87m`K7'[39;49m [38;5;203mmay not occur[39;49m on the
kind.m:021:   right hand side of mode definition.
kind.m:021: In the definition of the mode `u': error: a variable such as [38;5;87m`K7'[39;49m
kind.m:021:   [38;5;203mis not a valid mode.[39;49m
kind.m:022: In definition of mode `v'/0:
kind.m:022:   error: undefined inst `q'/0.
kind.m:022:   [38;5;226m(Did you mean `i'?)[39;49m
kind.m:022: In definition of mode `v'/0:
kind.m:022:   error: undefined mode `p'/0.
kind.m:022:   [38;5;226m(Did you mean `m' or `v'?)[39;49m
kind.m:027: In definition of inst `fi'/0:
kind.m:027:   error: undefined inst `f9'/0.
kind.m:027:   [38;5;226m(Did you mean `fi'?)[39;49m
